src/test/deca/context/invalid/created/rule2.4/redeclaration.deca
// Résultat erreur:
//    16:11
//    nom d'attribut déjà déclaré (règle 2.4)
//
// Description:
//    tests de programme incorrect contextuellement ( nom d’attribut déjà déclaré )
//
// Auteur:
//    Jerome
//
// Historique:
//    cree le 13/01/2024

{
   int i;
   boolean i;
   
}